# FirefoxTweaksVN

./: README.md  user.js
.github/workflows/: jekyll.yml  main.yml  pages-deploy.yml  ytproxy.yml
_posts/: 2023-10-10-user.js.md  2023-10-10-userjs.md
mpv/: mpv.conf  yt-dlp.conf
mpv/script-opts/: protocol_hook.conf
mpv/scripts/: protocol_hook.lua
mpv/scripts/ytproxy/: Cargo.toml  build.bat  build.sh  main.lua
mpv/scripts/ytproxy/src/: main.rs
nighttab/: gradientNighttab.txt
sidebery/: sidebery-data.json
userscript/: Handlers Helper.user.js  ajaxpipehelper.user.js  disablepagevisibilityauto.user.js  facebookunseen.userjs  fullscreenbuttonmobile.user.js  instantpagesuperlite.user.js  lazyloadfier.user.js  m3u8.user.js  mobileyoutubefullscreenhotkey.user.js  rejectserviceWorkerAuto.user.js  skipads.user.js  textzoomauto.user.js
utility/: handlers_patcher.html
